--- a/deploy/pacman-ingress.yaml
+++ b/deploy/pacman-ingress.yaml
@@ -11,7 +11,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /*
+          - path: /demo
             backend:
               serviceName: pacman
               servicePort: 80
