--- a/deploy/posthook/f5-update-dns-load-balancer.yaml
+++ b/deploy/posthook/f5-update-dns-load-balancer.yaml
@@ -10,9 +10,9 @@ spec:
   tower_auth_secret: toweraccess
   job_template_name: f5-update-dns-load-balancer
   extra_vars:
-    API_DOMAIN: moyegunl.northeast.aws.redhat-demo.com
+    API_DOMAIN: aws.oyegunle.com
     # The AWS Route53 NS Record must exist with NameServers:
     # ns1.f5cloudservices.com
     # ns2.f5cloudservices.com
-    GSLB_ZONE: www-apps
-    BASE_DOMAIN: moyegunl.northeast.aws.redhat-demo.com
+    GSLB_ZONE: gslb
+    BASE_DOMAIN: aws.oyegunle.com
