--- a/deploy/posthook/f5-update-dns-load-balancer.yaml
+++ b/deploy/posthook/f5-update-dns-load-balancer.yaml
@@ -16,3 +16,4 @@ spec:
     # ns2.f5cloudservices.com
     GSLB_ZONE: gslb
     BASE_DOMAIN: aws.oyegunle.com
+    BASE_AWS_DOMAIN: aws.oyegunle.com
