--- a/deploy/pacman-f5-route.yaml
+++ b/deploy/pacman-f5-route.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/name: pacman
 spec:
   # Added for f5 demonstration
-  host: pacman.www-apps.oscar.demo.red-chesterfield.com
+  host: pacman.gslb.aws.oyegunle.com
   path: "/"
   to:
     kind: Service
