--- a/deploy2/posthook/f5-update-dns-load-balancer.yaml
+++ b/deploy2/posthook/f5-update-dns-load-balancer.yaml
@@ -15,6 +15,6 @@ spec:
     # ns1.f5cloudservices.com
     # ns2.f5cloudservices.com
     GSLB_ZONE: gslb
-    BASE_DOMAIN: aws.oyegunle.com
+    BASE_DOMAIN: oyegunle.com
     BASE_AWS_DOMAIN: aws.oyegunle.com
     BASE_AZURE_DOMAIN: azure.oyegunle.com
