--- a/deploy2/posthook/f5-update-dns-load-balancer.yaml
+++ b/deploy2/posthook/f5-update-dns-load-balancer.yaml
@@ -17,4 +17,4 @@ spec:
     GSLB_ZONE: gslb
     BASE_DOMAIN: oyegunle.com
     BASE_AWS_DOMAIN: aws.oyegunle.com
-    BASE_AZURE_DOMAIN: azure.oyegunle.com
+    BASE_AZ_DOMAIN: azure.oyegunle.com
