--- a/deploy-full/pacman-f5-route.yaml
+++ b/deploy-full/pacman-f5-route.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/name: pacman
 spec:
   # Added for f5 demonstration
-  host: pacman.gslb.aws.oyegunle.com
+  host: pacman.pacman-demo.oyegunle.com
   path: "/"
   to:
     kind: Service
