--- a/deploy-full/pacman-route.yaml
+++ b/deploy-full/pacman-route.yaml
@@ -1,11 +1,13 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: pacman
+  name: f5-gslb-pacman
   namespace: pacman-app
   labels:
     app.kubernetes.io/name: pacman
 spec:
+  # Added for f5 demonstration
+  host: pacman.pacman-demo.oyegunle.com
   path: "/"
   to:
     kind: Service
