--- a/deploy/base/posthook/f5-update-dns-load-balancer.yaml
+++ b/deploy/base/posthook/f5-update-dns-load-balancer.yaml
@@ -10,11 +10,12 @@ spec:
   tower_auth_secret: toweraccess
   job_template_name: f5-update-dns-load-balancer
   extra_vars:
-    API_DOMAIN: oyegunle.com
+    API_DOMAIN: moyooyegunle.com
+    BASE_AWS_DOMAIN: aws.moyooyegunle.com
+    BASE_AZ_DOMAIN: azure.moyooyegunle.com
+    BASE_DOMAIN: moyooyegunle.com
+    GSLB_ZONE: pacman-demo
     # The AWS Route53 NS Record must exist with NameServers:
     # ns1.f5cloudservices.com
     # ns2.f5cloudservices.com
-    GSLB_ZONE: pacman-demo
-    BASE_DOMAIN: oyegunle.com
-    BASE_AWS_DOMAIN: aws.oyegunle.com
-    BASE_AZ_DOMAIN: azure.oyegunle.com
+
