--- a/deploy/overlays/openshift/pacman-route.yaml
+++ b/deploy/overlays/openshift/pacman-route.yaml
@@ -1,7 +1,7 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: pacman-reoute
+  name: pacman-route
   namespace: pacman-app
   labels:
     app.kubernetes.io/name: pacman
