--- a/deploy/overlays/eks/kustomization.yaml
+++ b/deploy/overlays/eks/kustomization.yaml
@@ -1,10 +1,11 @@
 bases:
   - ../../base
-# resources:
-#   - pacman-ingress.yaml
-patchesJson6902:
-  - target:
-      version: v1
-      kind: Service
-      name: pacman
-    path: patches/service-patch.yaml
+resources:
+  - pacman-service.yaml
+#  - pacman-ingress.yaml
+# patchesJson6902:
+#   - target:
+#       version: v1
+#       kind: Service
+#       name: pacman
+#     path: patches/service-patch.yaml
