--- a/hack/tower-setup/config/container_task_image/Dockerfile.taskimage
+++ b/hack/tower-setup/config/container_task_image/Dockerfile.taskimage
@@ -17,4 +17,13 @@ RUN curl -L -o /usr/bin/jq https://github.com/stedolan/jq/releases/download/jq-1
 #Install the AWS cli
 RUN yum install -y unzip && curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && ./aws/install
+
+#Install Kubectl cli
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
+    install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && chmod +x kubectl && \
+    mv ./kubectl /usr/bin/kubectl
+
+#Allow PFOlder Permissions
+RUN chgrp -R 0 /var/lib 
+
 USER 1000
